FIXED SAVING USER DATA BETWEEN INTENTS, ONTO PURCHASES AND TAX

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".Menu"
             android:exported="false" />
         <activity
-            android:name=".Reservation"
+            android:name=".Purchase"
             android:exported="false" />
         <activity
             android:name=".Home"
